--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -761,13 +761,6 @@ post:
 # Enable comments need to be set `post: comments: enable: true`, then set the corresponding comment plugin parameters below according to `type`
 #---------------------------
 
-gitalk:
-  owner: SuperUseryjh
-  repo: mr-onion-blog.gitalk
-  clientID: Ov23liyHPC3xavVGVZaP
-  clientSecret: 8c0b00bdac0d86e6c81be5480959bc1b83b3cc56
-  admin: ['SuperUseryjh']
-
 # Utterances
 # 基于 GitHub Issues
 # Based on GitHub Issues
@@ -795,12 +788,20 @@ disqus:
 # 基于 GitHub Issues
 # Based on GitHub Issues
 # See: https://github.com/gitalk/gitalk#options
+
+# gitalk:
+#   owner: SuperUseryjh
+#   repo: mr-onion-blog.gitalk
+#   clientID: Ov23liyHPC3xavVGVZaP
+#   clientSecret: 8c0b00bdac0d86e6c81be5480959bc1b83b3cc56
+#   admin: ['SuperUseryjh']
+
 gitalk:
-  clientID:
-  clientSecret:
-  repo:
-  owner:
-  admin: ['name']
+  clientID: Ov23liyHPC3xavVGVZaP
+  clientSecret: 8c0b00bdac0d86e6c81be5480959bc1b83b3cc56
+  repo: mr-onion-blog.gitalk
+  owner: SuperUseryjh
+  admin: ['SuperUseryjh']
   language: zh-CN
   labels: ['Gitalk']
   perPage: 10
