--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -797,8 +797,8 @@ disqus:
 #   admin: ['SuperUseryjh']
 
 gitalk:
-  clientID: Ov23liyHPC3xavVGVZaP
-  clientSecret: 8c0b00bdac0d86e6c81be5480959bc1b83b3cc56
+  clientID: Ov23liE7xQ1E5Fj0brz0
+  clientSecret: e23bba280b7b1dec0d01a2ffb0eecaf5371999dd
   repo: mr-onion-blog.gitalk
   owner: SuperUseryjh
   admin: ['SuperUseryjh']
