--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -371,7 +371,7 @@ navbar:
     - { key: "archive", link: "/archives/", icon: "iconfont icon-archive-fill" }
     - { key: "tag", link: "/tags/", icon: "iconfont icon-tags-fill" }
     - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
-    - { key: "status", link: "status.mr-onion-blog.fun", icon: "iconfont icon-notebook" }
+    - { key: "status", link: "https://status.mr-onion-blog.fun", icon: "iconfont icon-notebook", name: "站点状态" }
 
 # 搜索功能，基于 hexo-generator-search 插件，若已安装其他搜索插件请关闭此功能，以避免生成多余的索引文件
 # Search feature, based on hexo-generator-search. If you have installed other search plugins, please disable this feature to avoid generating redundant index files
