--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -678,7 +678,7 @@ post:
     # CreativeCommons license
     # See: https://creativecommons.org/share-your-work/cclicenses/
     # Options: BY | BY-SA | BY-ND | BY-NC | BY-NC-SA | BY-NC-ND | ZERO
-    license: 'BY-NC-SA'
+    license: 'BY-SA'
 
     # 显示作者
     author:
